<resources>

    <!-- Application Name -->
    <string name="app_name">在庫管理システム</string>
    <!-- Application Copyright -->
    <string name="app_copyright">Copyright © 2021 Portus Inc. All Rights Reserved.</string>

    <!-- ボタンのテキスト -->
    <string name="btnStart_text">開　　始</string>
    <string name="btnLogin_text">ログイン</string>

    <!-- テキスト入力レイアウトのヒントテキスト -->
    <string name="tilOffice_hint">事業所</string>
    <string name="tilRepresentative_hint">担当者</string>
    <string name="tilWarehouse_hint">倉庫</string>

    <!-- Menu Text -->
    <string name="MenuText_GoodsIssueProcess">出　　庫</string>
    <string name="MenuText_GoodsIssueList">出庫一覧</string>
    <string name="MenuText_InventoryInquiry">在庫照会</string>

    <!-- 進行状況 -->
    <string name="text_goods_issue_progress_phase1">出庫受付</string>
    <string name="text_goods_issue_progress_phase2">在庫確認中</string>
    <string name="text_goods_issue_progress_phase3">出庫作業中</string>
    <string name="text_goods_issue_progress_phase4">受領確認</string>

    <!-- ガイダンス -->
    <string name="text_function_menu_guidance"><big>機能を選択してください</big></string>
    <string name="text_goods_issue_guidance_phase1"><big>出庫伝票のQRをスキャン</big>\n<small>（QRが無いときは「＋」を押して下さい）</small></string>
    <string name="text_goods_issue_guidance_phase2"><big>表示票のQRをスキャン</big></string>
    <string name="text_goods_issue_guidance_phase3"><big>作業後に完了ボタンを押下</big></string>
    <string name="text_goods_issue_guidance_phase4"><big>ドライバーに受領確認を依頼</big></string>
    <string name="text_goods_issue_guidance_partition">></string>
    <string name="text_inventory_inquiry_guidance"><big>表示票のQRをスキャン</big></string>

    <!-- 出庫処理ボタン -->
    <string name="button_text_goods_issue_progress_phase1"><big>出庫作業開始</big>\n<small>（全伝票スキャン後に押して下さい）</small></string>

    <!-- TopActivityで使用するメッセージ -->
    <string name="top_activity_message1">アプリ内のバージョン情報の取得に失敗しました。\nパッケージ名：{0}が見つかりません。</string>
    <string name="top_activity_message2">最新のバージョン情報の取得に失敗しました。\n{0}</string>
    <string name="top_activity_message3">最新のバージョン情報が見つかりませんでした。</string>
    <string name="top_activity_message4">最新のバージョンにアップデート可能です。</string>

    <!-- LoginActivityで使用するメッセージ -->
    <string name="login_activity_message1">事業所を選択して下さい。</string>
    <string name="login_activity_message2">担当者を選択して下さい。</string>
    <string name="login_activity_message3">倉庫を選択して下さい。</string>
    <string name="login_activity_message4">事業所の取得に失敗しました。\n{0}</string>
    <string name="login_activity_message5">担当者の取得に失敗しました。\n{0}</string>
    <string name="login_activity_message6">倉庫の取得に失敗しました。\n{0}</string>
    <string name="login_activity_message7">該当する事業所のデータがありません。</string>
    <string name="login_activity_message8">該当する担当者のデータがありません。</string>
    <string name="login_activity_message9">該当する倉庫のデータがありません。</string>

    <!-- ログインコンフィグで使用するファイル名&キー -->
    <string name="login_preferences_file_name">LoginInfo</string>
    <string name="login_preferences_key_kaicd">Kaicd</string>
    <string name="login_preferences_key_tensyocd">Tensyocd</string>
    <string name="login_preferences_key_tensyonm">Tensyonm</string>
    <string name="login_preferences_key_sgytantocd">Sgytantocd</string>
    <string name="login_preferences_key_sgytantonm">Sgytantonm</string>
    <string name="login_preferences_key_soukocd">Soukocd</string>
    <string name="login_preferences_key_soukonm">Soukonm</string>
    <string name="login_preferences_key_soukornm">Soukornm</string>
    <string name="login_preferences_key_sgydate">Sgydate</string>
    <string name="login_preferences_key_updatedate">Updatedate</string>

    <!-- 画面遷移で使用するキー -->
    <string name="intent_key_login_info">LoginInfo</string>
    <string name="intent_key_previous_activity_name">PreviousActivityName</string>
    <string name="intent_key_zaiko_syokai">ZaikoSyokai</string>
    <string name="intent_key_sagyochu_syuko_denpyos">SagyochuSyukoDenpyos</string>
    <string name="intent_key_selected_sagyochu_syuko_denpyo_index">SelectedSagyochuSyukoDenpyoIndex</string>

    <!-- InventoryInquiryPage1Activityで使用するメッセージ-->
    <string name="inventory_inquiry_page1_activity_failed_getdata_message">在庫照会データの取得に失敗しました。\n{0}</string>
    <string name="inventory_inquiry_page1_activity_nodata_message">該当する在庫照会データがありません。</string>
    <string name="inventory_inquiry_page1_activity_not_hyojihyosqr">表示票のQRではありません。</string>>

    <!-- InventoryInquiryPage1Activityで使用するボタンtext -->
    <string name="inventory_inquiry_page1_activity_zaikosyokaibtn">在庫照会</string>
    <string name="inventory_inquiry_page1_activity_cannot_press">(スキャンした伝票が無いので押せません)</string>

    <!-- GoodsIssuListActivityで使用するメッセージ -->
    <string name="goods_issue_list_activity_failed_get_syukosdata_message">出庫一覧データの取得に失敗しました。 \n{0}</string>
    <string name="goods_issue_list_activity_nosyukosdata_message">該当する出庫一覧データがありません。</string>
    <string name="goods_issue_list_activity_failed_insert_syukosgydata_message">出庫作業データの登録に失敗しました。\n{0}</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>